--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.venuesApp.view.fragments.HomeFragment"
+        android:name="com.venuesApp.view.fragments.VenuesFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_venues"/>
 </navigation>
