connected some data for the venue detail screen

--- a/app/src/main/res/layout/fragment_venue_details.xml
+++ b/app/src/main/res/layout/fragment_venue_details.xml
@@ -14,13 +14,15 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp">
 
             <TextView
                 android:id="@+id/venue_details_title_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/venue_details_title"
+                android:layout_marginBottom="5dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
