--- a/app/src/main/res/layout/venue_contacts.xml
+++ b/app/src/main/res/layout/venue_contacts.xml
@@ -19,25 +19,29 @@
             android:id="@+id/formattedPhone_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/venue_phone_label" />
+            android:text="@string/venue_phone_label"
+            android:layout_marginBottom="5dp"/>
 
         <TextView
             android:id="@+id/facebookUsername_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/venue_facebookUsername_label" />
+            android:text="@string/venue_facebookUsername_label"
+            android:layout_marginBottom="5dp"/>
 
         <TextView
             android:id="@+id/instagram_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/venue_instagram_label" />
+            android:text="@string/venue_instagram_label"
+            android:layout_marginBottom="5dp"/>
 
         <TextView
             android:id="@+id/twitter_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/venue_twitter_label" />
+            android:text="@string/venue_twitter_label"
+            android:layout_marginBottom="5dp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -53,24 +57,28 @@
             android:id="@+id/formattedPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             />
 
         <TextView
             android:id="@+id/facebookUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             />
 
         <TextView
             android:id="@+id/instagram"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             />
 
         <TextView
             android:id="@+id/twitter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
